--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             </div>
             <div id="timerDisplay"></div>
         </div>
+        <div class="theme-switch">
+            <div class="checkbox-wrapper-8">
+                Dark Mode
+                <input class="tgl tgl-skewed" id="darkModeToggle" type="checkbox" onchange="toggleDarkMode()"/>
+                <label class="tgl-btn" data-tg-off="OFF" data-tg-on="ON" for="darkModeToggle"></label>
+            </div>
+        </div>
         <script src="script.js"></script>
     </div>
 </body>
