--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="theme-switch">
             <div class="checkbox-wrapper-8">
-                Dark Mode
+                Modo Escuro
                 <input class="tgl tgl-skewed" id="darkModeToggle" type="checkbox" onchange="toggleDarkMode()"/>
                 <label class="tgl-btn" data-tg-off="OFF" data-tg-on="ON" for="darkModeToggle"></label>
             </div>
